; ModuleID = '/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/net/ethernet/mcs8140/extr_nuport_mac.c_nuport_mac_init_rx_ring.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/mcs814x/files-3.18/drivers/net/ethernet/mcs8140/extr_nuport_mac.c_nuport_mac_init_rx_ring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.nuport_mac_priv = type { i32*, %struct.sk_buff**, i64, i64, i64 }
%struct.sk_buff = type { i32 }

@RX_RING_SIZE = common dso_local global i32 0, align 4
@RX_ALLOC_SIZE = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@RX_SKB_HEADROOM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @nuport_mac_init_rx_ring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nuport_mac_init_rx_ring(%struct.net_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.nuport_mac_priv*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  %7 = load %struct.net_device*, %struct.net_device** %3, align 8
  %8 = call %struct.nuport_mac_priv* @netdev_priv(%struct.net_device* %7)
  store %struct.nuport_mac_priv* %8, %struct.nuport_mac_priv** %4, align 8
  %9 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %4, align 8
  %10 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %9, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %4, align 8
  %12 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %11, i32 0, i32 3
  store i64 0, i64* %12, align 8
  %13 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %4, align 8
  %14 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %13, i32 0, i32 4
  store i64 0, i64* %14, align 8
  store i32 0, i32* %6, align 4
  br label %15

15:                                               ; preds = %45, %1
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @RX_RING_SIZE, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %48

19:                                               ; preds = %15
  %20 = load %struct.net_device*, %struct.net_device** %3, align 8
  %21 = load i32, i32* @RX_ALLOC_SIZE, align 4
  %22 = call %struct.sk_buff* @netdev_alloc_skb(%struct.net_device* %20, i32 %21)
  store %struct.sk_buff* %22, %struct.sk_buff** %5, align 8
  %23 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %24 = icmp ne %struct.sk_buff* %23, null
  br i1 %24, label %28, label %25

25:                                               ; preds = %19
  %26 = load i32, i32* @ENOMEM, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %2, align 4
  br label %49

28:                                               ; preds = %19
  %29 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %30 = load i32, i32* @RX_SKB_HEADROOM, align 4
  %31 = call i32 @skb_reserve(%struct.sk_buff* %29, i32 %30)
  %32 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %33 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %4, align 8
  %34 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %33, i32 0, i32 1
  %35 = load %struct.sk_buff**, %struct.sk_buff*** %34, align 8
  %36 = load i32, i32* %6, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.sk_buff*, %struct.sk_buff** %35, i64 %37
  store %struct.sk_buff* %32, %struct.sk_buff** %38, align 8
  %39 = load %struct.nuport_mac_priv*, %struct.nuport_mac_priv** %4, align 8
  %40 = getelementptr inbounds %struct.nuport_mac_priv, %struct.nuport_mac_priv* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  %42 = load i32, i32* %6, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  store i32 1, i32* %44, align 4
  br label %45

45:                                               ; preds = %28
  %46 = load i32, i32* %6, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %6, align 4
  br label %15

48:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %49

49:                                               ; preds = %48, %25
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local %struct.nuport_mac_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local %struct.sk_buff* @netdev_alloc_skb(%struct.net_device*, i32) #1

declare dso_local i32 @skb_reserve(%struct.sk_buff*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
